--- a/final_assignment.ipynb
+++ b/final_assignment.ipynb
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Australia</td>\n",
-       "      <td>4</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -513,53 +513,53 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Brazil</td>\n",
-       "      <td>3</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>Bulgaria</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Canada</td>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
        "      <td>Costa Rica</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>6</th>\n",
        "      <td>Croatia</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>France</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>Finland</td>\n",
+       "      <td>Greece</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>France</td>\n",
-       "      <td>4</td>\n",
+       "      <td>India</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>Germany</td>\n",
-       "      <td>13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
        "      <td>Ireland</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
+       "      <th>12</th>\n",
        "      <td>Israel</td>\n",
-       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Italy</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
@@ -578,13 +578,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
-       "      <td>Nigeria</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Poland</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
-       "      <td>Poland</td>\n",
-       "      <td>2</td>\n",
+       "      <td>Portugal</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
@@ -593,18 +593,38 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
-       "      <td>Switzerland</td>\n",
+       "      <td>Singapore</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
-       "      <td>United Kingdom</td>\n",
-       "      <td>38</td>\n",
+       "      <td>South Africa</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
+       "      <td>Sweden</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Switzerland</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Thailand</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
        "      <td>United States</td>\n",
-       "      <td>124</td>\n",
+       "      <td>237</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -612,38 +632,42 @@
       ],
       "text/plain": [
        "           Country  count\n",
-       "0        Australia      4\n",
+       "0        Australia      6\n",
        "1          Austria      1\n",
        "2     Bahamas, The      1\n",
        "3          Belgium      1\n",
-       "4           Brazil      3\n",
-       "5         Bulgaria      2\n",
-       "6           Canada     11\n",
-       "7       Costa Rica      1\n",
-       "8          Croatia      1\n",
-       "9          Finland      1\n",
-       "10          France      4\n",
-       "11         Germany     13\n",
-       "12         Ireland      3\n",
-       "13          Israel      1\n",
+       "4           Canada     22\n",
+       "5       Costa Rica      1\n",
+       "6          Croatia      2\n",
+       "7           France      3\n",
+       "8          Germany     17\n",
+       "9           Greece      1\n",
+       "10           India      1\n",
+       "11         Ireland      3\n",
+       "12          Israel      3\n",
+       "13           Italy      2\n",
        "14         Moldova      1\n",
        "15     Netherlands      9\n",
        "16     New Zealand      1\n",
-       "17         Nigeria      1\n",
-       "18          Poland      2\n",
+       "17          Poland      2\n",
+       "18        Portugal      1\n",
        "19          Russia      1\n",
-       "20     Switzerland      1\n",
-       "21  United Kingdom     38\n",
-       "22   United States    124"
+       "20       Singapore      1\n",
+       "21    South Africa      3\n",
+       "22          Sweden      2\n",
+       "23     Switzerland      3\n",
+       "24        Thailand      1\n",
+       "25  United Kingdom     49\n",
+       "26   United States    237"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "selectlocation_mentalhealth =coworkers.groupby(['Country'])['anonymity'].count().reset_index(name=\"count\")\n",
+    "selectlocation_mentalhealth =anonymity.groupby(['Country'])['anonymity'].count().reset_index(name=\"count\")\n",
     "selectlocation_mentalhealth .sort_values(\"count\", axis=0, ascending = False)\n",
     "selectlocation_mentalhealth .head(100)"
    ]
